--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FreeMC</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" href="https://i.ibb.co/PZqhhj9Y/Minecoin-Logo-removebg-preview.png" type="image/png">
   <style>
     * { box-sizing: border-box; }
     html, body { margin: 0; padding: 0; overflow-x: hidden; background: #0f172a; color: #fff; }
@@ -14,55 +15,89 @@
     .fade-in { animation: fadeIn 0.5s ease both; }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
+    .transition-scale { transition: transform 0.3s ease; }
+    .transition-scale:hover { transform: scale(1.02); }
+
     .tab { transition: color 0.3s ease; padding: 0.75rem; }
-    .tab.active .material-icons { color: rgba(96,165,250,0.6); }
     .tab:hover .material-icons { color: #38bdf8; }
+    .tab.active .material-icons { color: rgba(96,165,250,0.6); }
+
+    .background-polaris { background: repeating-linear-gradient(45deg, #0f172a 0, #0f172a 1px, rgba(13,19,33) 1px, rgba(13,19,33) 2px, #0f172a 2px, #0f172a 18px, rgba(13,19,33) 18px, rgba(13,19,33) 19px, #0f172a 19px, #0f172a 35px); }
+    .dot { position: absolute; width: 6px; height: 6px; background: rgba(255,255,255,0.08); border-radius: 9999px; animation: floatUp 12s linear infinite; }
+    @keyframes floatUp { 0% { transform: translateY(100vh) scale(0.5); opacity: 0; } 50% { opacity: 1; } 100% { transform: translateY(-100px) scale(1); opacity: 0; } }
 
     .carousel-img { width: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease; }
     .carousel-img.loaded { opacity: 1; }
     .carousel-dot { width: 10px; height: 10px; border-radius: 50%; background: #aaa; margin: 0 4px; cursor: pointer; transition: background 0.3s; }
     .carousel-dot.active { background: #38bdf8; }
 
+    .card-buttons { display: flex; justify-content: center; gap: 1rem; margin-top: 1rem; }
     .btn { padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 500; transition: transform 0.2s ease; }
     .btn.download { background: #3b82f6; color: #fff; }
     .btn.download:hover { transform: scale(1.05); }
     .btn.marketplace { background: #22c55e; color: #fff; }
     .btn.marketplace:hover { transform: scale(1.05); }
-
-    .card-buttons { display: flex; justify-content: center; gap: 1rem; margin-top: 1rem; }
   </style>
 </head>
-<body>
-  <main class="p-4">
-    <div class="mb-6 fade-in">
-      <input id="search-input" type="text" placeholder="Search..." class="w-full bg-gray-800 text-white px-4 py-3 rounded-xl shadow-lg" />
-    </div>
-    <h1 id="section-title" class="text-2xl font-bold capitalize mb-4 fade-in">worlds</h1>
-    <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-    <div id="no-results" class="hidden text-center text-gray-400 mt-8">No results found.</div>
-  </main>
+<body class="relative text-white min-h-screen bg-gray-900 overflow-x-hidden">
+  <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
+    <div class="dot" style="left:5%;animation-delay:0s"></div>
+    <div class="dot" style="left:15%;animation-delay:1s"></div>
+    <div class="dot" style="left:25%;animation-delay:2s"></div>
+    <div class="dot" style="left:35%;animation-delay:3s"></div>
+    <div class="dot" style="left:45%;animation-delay:4s"></div>
+    <div class="dot" style="left:55%;animation-delay:2s"></div>
+    <div class="dot" style="left:65%;animation-delay:3s"></div>
+    <div class="dot" style="left:75%;animation-delay:1s"></div>
+    <div class="dot" style="left:85%;animation-delay:0.5s"></div>
+    <div class="dot" style="left:95%;animation-delay:2.5s"></div>
+  </div>
+  <div class="flex flex-col md:flex-row min-h-screen">
+    <aside class="w-full md:w-20 bg-gray-800 m-4 rounded-3xl p-6 flex md:flex-col flex-row items-center justify-around md:space-y-10 space-x-6 md:space-x-0 shadow-lg">
+      <button class="tab active" data-type="worlds"><span class="material-icons">public</span></button>
+      <button class="tab" data-type="addons"><span class="material-icons">extension</span></button>
+      <button class="tab" data-type="textures"><span class="material-icons">palette</span></button>
+      <button class="tab" data-type="skins"><span class="material-icons">checkroom</span></button>
+    </aside>
+
+    <main class="flex-1 p-4">
+      <div class="mb-6 transition-scale fade-in">
+        <input id="search-input" type="text" placeholder="Search..." class="w-full text-white bg-gray-800 px-4 py-3 rounded-xl shadow-lg" />
+      </div>
+      <h1 id="section-title" class="text-2xl font-bold capitalize mb-4 fade-in">worlds</h1>
+      <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+      <div id="no-results" class="hidden text-center text-gray-400 mt-8">No results found.</div>
+    </main>
+  </div>
+
+  <div class="relative w-full bg-gray-900 text-white text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2 mt-10">
+    <span class="material-icons text-blue-400">lightbulb</span>
+    <span>Have suggestions? <a href="https://form.typeform.com/to/UyA2yq19" target="_blank" class="text-blue-400 underline hover:text-blue-300">Let us know here</a>.</span>
+  </div>
+
   <script>
     let currentTab = 'worlds', allData = {};
-    const grid = document.getElementById('grid'),
+    const tabs = document.querySelectorAll('.tab'),
+          sectionTitle = document.getElementById('section-title'),
+          grid = document.getElementById('grid'),
           searchInput = document.getElementById('search-input'),
-          noResults = document.getElementById('no-results'),
-          sectionTitle = document.getElementById('section-title');
+          noResults = document.getElementById('no-results');
 
-    async function load() {
+    async function loadData() {
       try {
         const res = await fetch('api.json');
         if (!res.ok) throw new Error();
         allData = await res.json();
         localStorage.setItem('freemcData', JSON.stringify(allData));
-        render();
+        renderGrid();
       } catch {
         const stored = localStorage.getItem('freemcData');
-        if (stored) { allData = JSON.parse(stored); render(); }
+        if (stored) { allData = JSON.parse(stored); renderGrid(); }
         else { noResults.textContent = 'Failed to load data.'; noResults.classList.remove('hidden'); }
       }
     }
 
-    function truncate(text, max=100) {
+    function truncate(text, max = 100) {
       return text ? (text.length > max ? text.slice(0, max) + '...' : text) : '';
     }
 
@@ -77,7 +112,7 @@
       ).join('');
 
       return `
-        <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transition-scale fade-in">
+        <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale fade-in">
           <div id="${id}" class="relative">
             ${slides}
             <div class="absolute bottom-2 w-full text-center">${dots}</div>
@@ -94,7 +129,7 @@
       `;
     }
 
-    function render() {
+    function renderGrid() {
       const list = allData[currentTab] || [];
       const q = searchInput.value.toLowerCase();
       const filtered = list.filter(item => item.title.toLowerCase().includes(q));
@@ -108,15 +143,15 @@
         dot.onclick = () => {
           const idx = +dot.dataset.idx;
           const id = dot.dataset.id;
-          const container = document.getElementById(id);
-          container.querySelectorAll('.carousel-img').forEach((img, i) => img.classList.toggle('hidden', i !== idx));
-          container.querySelectorAll('.carousel-dot').forEach((d, i) => d.classList.toggle('active', i === idx));
+          const cont = document.getElementById(id);
+          cont.querySelectorAll('.carousel-img').forEach((img, i) => img.classList.toggle('hidden', i !== idx));
+          cont.querySelectorAll('.carousel-dot').forEach((d, i) => d.classList.toggle('active', i === idx));
         };
       });
     }
 
-    searchInput.oninput = render;
-    document.addEventListener('DOMContentLoaded', () => { load(); });
+    searchInput.oninput = renderGrid;
+    document.addEventListener('DOMContentLoaded', () => { loadData(); });
   </script>
 </body>
 </html>
